# pv-stuff

./: .gitattributes  .gitignore  .pre-commit-config.yaml  CHANGES.md  CONTRIBUTING.md  LICENSE  Makefile  Makefile.private.example  Makefile.targets  Makefile.variables  README.md  environment.yml  noxfile.py  pyproject.toml
.make/: .bumpversion.toml  CHANGES_MAKEFILE.md  Makefile  README.md  base.make
configs/: README.md  default.yaml
configs/plotting/: default.yaml
configs/pv_module/: canadian_solar_cs5p_220m.yaml
data/: README.md
docs/: conda_environment_creation.md  makefile_environment_targets.md
img/: README.md
notebooks/: README.md
scripts/: README.md  config.sh.example  example_script.py  pv_curve.py  pv_curve_example.py
src/: README.md  __init__.py  utils.py
src/config/: config.py
src/config/plotting/: plotting.py
src/config/pv_module/: pv_module.py
src/plot/: utils.py
